--- a/docs/MPM_errors_manuscript/Bibliography.bib
+++ b/docs/MPM_errors_manuscript/Bibliography.bib
@@ -1,9 +1,8 @@
 @Article{Crouse1987,
-author = {Crouse, D. T. and Crowder, L. B. and Caswell, H. }, 
-title = {{A Stage-Based Population Model for Loggerhead Sea Turtles and Implications for Conservation}}, 
+author = {CrouseDTCrowderLBCaswellH}, 
+title = {{A stage-based population model for loggerhead sea turtles and implications for conservation}}, 
 journal = {Ecology}, 
 volume = {68}, 
-issue = {5}, 
 pages = {1412-1423}, 
 year = {1987}, 
 abstract = {}, 
@@ -13,11 +12,10 @@ keywords = {}}
 
 
 @Article{Crowder1994,
-author = {Crowder, L. B. and Crouse, D. T. and Heppell, S. S. and Martin, T. H. }, 
+author = {CrowderLBCrouseDTHeppellSSMartinTH}, 
 title = {{Predicting the impact of turtle excluder devices on loggerhead sea turtle populations}}, 
 journal = {Ecol Appl}, 
 volume = {4}, 
-issue = {}, 
 pages = {437-445}, 
 year = {1994}, 
 abstract = {}, 
@@ -26,36 +24,8 @@ location = {},
 keywords = {}}
 
 
-@Article{deValpine2014,
-author = {{de Valpine}, P. and Scranton, K. and Knape, J. and Ram, K. and Mills, N. J. }, 
-title = {{The importance of individual developmental variation in stage-structured population models.}}, 
-journal = {Ecol Lett}, 
-volume = {17}, 
-issue = {}, 
-pages = {1026-1038}, 
-year = {2014}, 
-abstract = {Population stage structure is fundamental to ecology, and models of this structure have proven useful in many different systems. Many ecological variables other than stage, such as habitat type, site occupancy and metapopulation status are also modelled using transitions among discrete states. Transitions among life stages can be characterised by the distribution of time spent in each stage, including the mean and variance of each stage duration and within-individual correlations among multiple stage durations. Three modelling traditions represent stage durations differently. Matrix models can be derived as a long-run approximation from any distribution of stage durations, but they are often interpreted directly as a Markov model for stage transitions. Statistical stage-duration distribution models accommodate the variation typical of cohort development data, but such realism has rarely been incorporated in population theory or statistical population models. Delay-differential equation models include lags but no variation, except in limited cases. We synthesise these models in one framework and illustrate how individual variation and correlations in development can impact population growth. Furthermore, different development models can yield the same long-term matrix transition rates but different sensitivities and elasticities. Finally, we discuss future directions for estimating realistic stage duration models from data.}, 
-doi = {10.1111/ele.12290}, 
-location = {}, 
-keywords = {Animals; Arthropods; Arthropods: physiology; Biological; Life Cycle Stages; Life Cycle Stages: physiology; Models; Population Dynamics; Statistical}}
-
-
-@Article{Fujiwara2001a,
-author = {Fujiwara, M. and Caswell, H. }, 
-title = {{Demography of the endangered North Atlantic right whale}}, 
-journal = {Nature}, 
-volume = {414}, 
-issue = {}, 
-pages = {537-541}, 
-year = {2001}, 
-abstract = {}, 
-doi = {10.1038/35107054}, 
-location = {}, 
-keywords = {}}
-
-
 @Book{Morris2002a,
-author = {Morris, W. F. and Doak, D. F. }, 
+author = {MorrisWFDoakDF}, 
 title = {Quantitative conservation biology: Theory and practice of population viability analysis}, 
 volume = {}, 
 pages = {}, 
@@ -65,14 +35,13 @@ publisher = {Sinauer Associates},
 address = {Sunderland, MA}, 
 year = {2002}, 
 abstract = {}, 
-url = {http://books.google.com/books?id=8Z6GQgAACAAJ\&printsec=frontcover}}
+keywords = {}}
 
 @Article{Salguero-Gomez2015,
-author = {Salguero-G{\'o}mez, R. and Jones, O. R. and Archer, C. R. and Buckley, Y. M. and Che-Castaldo, J. and Caswell, H. and Hodgson, D. and Scheuerlein, A. and Conde, D. A. and Brinks, E. and de Buhr, H. and Farack, C. and Gottschalk, F. and Hartmann, A. and Henning, A. and Hoppe, G. and R{\"o}mer, G. and Runge, J. and Ruoff, T. and Wille, J. and Zeh, S. and Davison, R. and Vieregg, D. and Baudisch, A. and Altwegg, R. and Colchero, F. and Dong, M. and de Kroon, H. and Lebreton, J.-D. and Metcalf, C. J. E. and Neel, M. M. and Parker, I. M. and Takada, T. and Valverde, T. and V{\'e}lez-Espino, L. A. and Wardle, G. M. and Franco, M. and Vaupel, J. W. }, 
-title = {{The {COMPADRE} Plant Matrix Database: an open online repository for plant demography}}, 
-journal = {J. Ecol.}, 
+author = {Salguero-GómezRJonesORArcherCRBuckleyYMChe-CastaldoJCaswellHHodgsonDScheuerleinACondeDABrinksEde BuhrHFarackCGottschalkFHartmannAHenningAHoppeGRömerGRungeJRuoffTWilleJZehSDavisonRViereggDBaudischAAltweggRColcheroFDongMde KroonHLebretonJ-DMetcalfCJENeelMMParkerIMTakadaTValverdeTVélez-EspinoLAWardleGMFrancoMVaupelJW}, 
+title = {{The COMPADRE Plant Matrix Database: an open online repository for plant demography}}, 
+journal = {J Ecol}, 
 volume = {103}, 
-issue = {}, 
 pages = {202-218}, 
 year = {2015}, 
 abstract = {}, 
@@ -81,41 +50,13 @@ location = {},
 keywords = {}}
 
 
-@Article{Cousin2006,
-author = {Cousin, G. }, 
-title = {{An introduction to threshold concepts}}, 
-journal = {Planet}, 
-volume = {17}, 
-issue = {1}, 
-pages = {4-5}, 
-year = {2006}, 
-abstract = {}, 
-doi = {10.11120/plan.2006.00170004}, 
-location = {}, 
-keywords = {}}
-
-
-@Book{Ellner2016a,
-author = {Ellner, S. P. and Childs, D. Z. and Rees, M. }, 
-title = {Data-driven Modelling of Structured Populations: A Practical Guide to the Integral Projection Model}, 
-volume = {}, 
-pages = {}, 
-editor = {}, 
-edition = {}, 
-publisher = {Springer International}, 
-address = {Switzerland}, 
-year = {2016}, 
-abstract = {Book Description: This book is a ``How To'' guide for modeling population dynamics using Integral Projection Models (IPM) starting from observational data. It is written by a leading research team in this area and includes code in the R language (in the text and online) to carry out all computations. The intended audience are ecologists, evolutionary biologists, and mathematical biologists interested in developing data-driven models for animal and plant populations. IPMs may seem hard as they involve integrals. The aim of this book is to demystify IPMs, so they become the model of choice for populations structured by size or other continuously varying traits. The book uses real examples of increasing complexity to show how the life-cycle of the study organism naturally leads to the appropriate statistical analysis, which leads directly to the IPM itself. A wide range of model types and analyses are presented, including model construction, computational methods, and the underlying theory, with the more technical material in Boxes and Appendices. Self-contained R code which replicates all of the figures and calculations within the text is available to readers on GitHub. Stephen P. Ellner is Horace White Professor of Ecology and Evolutionary Biology at Cornell University, USA; Dylan Z. Childs is Lecturer and NERC Postdoctoral Fellow in the Department of Animal and Plant Sciences at The University of Sheffield, UK; Mark Rees is Professor in the Department of Animal and Plant Sciences at The University of Sheffield, UK.}, 
-url = {http://www.amazon.com/Data-driven-Modelling-Structured-Populations-Mathematical/dp/3319288911\%3FSubscriptionId\%3D0NM5T5X751JWT17C4GG2\%26tag\%3Dsonnysoftware\%26linkCode\%3Dxm2\%26camp\%3D2025\%26creative\%3D165953\%26creativeASIN\%3D3319288911}}
-
 @Article{Salguero-Gomez2016,
-author = {Salguero-G{\'o}mez, R. and Jones, O. R. and Archer, C. R. and Bein, C. and de Buhr, H. and Farack, C. and Gottschalk, F. and Hartmann, A. and Henning, A. and Hoppe, G. and R{\"o}mer, G. and Ruoff, T. and Sommer, V. and Wille, J. and Voigt, J. and Zeh, S. and Vieregg, D. and Buckley, Y. M. and Che-Castaldo, J. and Hodgson, D. and Scheuerlein, A. and Caswell, H. and Vaupel, J. W. }, 
-title = {{{COMADRE}: a global data base of animal demography.}}, 
-journal = {J. Anim. Ecol.}, 
+author = {Salguero-GómezRJonesORArcherCRBeinCde BuhrHFarackCGottschalkFHartmannAHenningAHoppeGRömerGRuoffTSommerVWilleJVoigtJZehSViereggDBuckleyYMChe-CastaldoJHodgsonDScheuerleinACaswellHVaupelJW}, 
+title = {{COMADRE: a global data base of animal demography.}}, 
+journal = {J Anim Ecol}, 
 volume = {85}, 
-issue = {2}, 
 pages = {371-384}, 
-year = {2016}, 
+year = {2016 Mar}, 
 abstract = {The open-data scientific philosophy is being widely adopted and proving to promote considerable progress in ecology and evolution. Open-data global data bases now exist on animal migration, species distribution, conservation status, etc. However, a gap exists for data on population dynamics spanning the rich diversity of the animal kingdom world-wide. This information is fundamental to our understanding of the conditions that have shaped variation in animal life histories and their relationships with the environment, as well as the determinants of invasion and extinction. Matrix population models (MPMs) are among the most widely used demographic tools by animal ecologists. MPMs project population dynamics based on the reproduction, survival and development of individuals in a population over their life cycle. The outputs from MPMs have direct biological interpretations, facilitating comparisons among animal species as different as Caenorhabditis elegans, Loxodonta africana and Homo sapiens. Thousands of animal demographic records exist in the form of MPMs, but they are dispersed throughout the literature, rendering comparative analyses difficult. Here, we introduce the COMADRE Animal Matrix Database, an open-data online repository, which in its version 1.0.0 contains data on 345 species world-wide, from 402 studies with a total of 1625 population projection matrices. COMADRE also contains ancillary information (e.g. ecoregion, taxonomy, biogeography, etc.) that facilitates interpretation of the numerous demographic metrics that can be derived from its MPMs. We provide R code to some of these examples. SYNTHESIS: We introduce the COMADRE Animal Matrix Database, a resource for animal demography. Its open-data nature, together with its ancillary information, will facilitate comparative analysis, as will the growing availability of databases focusing on other aspects of the rich animal diversity, and tools to query and combine them. Through future frequent updates of COMADRE, and its integration with other online resources, we encourage animal ecologists to tackle global ecological and evolutionary questions with unprecedented sample size.}, 
 doi = {10.1111/1365-2656.12482}, 
 location = {}, 
@@ -123,13 +64,12 @@ keywords = {}}
 
 
 @Article{Salguero-Gomez2016a,
-author = {Salguero-G{\'o}mez, R. and Jones, O. R. and Jongejans, E. and Blomberg, S. P. and Hodgson, D. J. and Mbeau-Ache, C. and Zuidema, P. A. and de Kroon, H. and Buckley, Y. M. }, 
+author = {Salguero-GómezRJonesORJongejansEBlombergSPHodgsonDJMbeau-AcheCZuidemaPAde KroonHBuckleyYM}, 
 title = {{Fast-slow continuum and reproductive strategies structure plant life-history variation worldwide.}}, 
 journal = {Proc. Natl. Acad. Sci. U. S. A.}, 
 volume = {113}, 
-issue = {1}, 
 pages = {230-235}, 
-year = {2016}, 
+year = {2016 Jan 05}, 
 abstract = {The identification of patterns in life-history strategies across the tree of life is essential to our prediction of population persistence, extinction, and diversification. Plants exhibit a wide range of patterns of longevity, growth, and reproduction, but the general determinants of this enormous variation in life history are poorly understood. We use demographic data from 418 plant species in the wild, from annual herbs to supercentennial trees, to examine how growth form, habitat, and phylogenetic relationships structure plant life histories and to develop a framework to predict population performance. We show that 55\% of the variation in plant life-history strategies is adequately characterized using two independent axes: the fast-slow continuum, including fast-growing, short-lived plant species at one end and slow-growing, long-lived species at the other, and a reproductive strategy axis, with highly reproductive, iteroparous species at one extreme and poorly reproductive, semelparous plants with frequent shrinkage at the other. Our findings remain consistent across major habitats and are minimally affected by plant growth form and phylogenetic ancestry, suggesting that the relative independence of the fast-slow and reproduction strategy axes is general in the plant kingdom. Our findings have similarities with how life-history strategies are structured in mammals, birds, and reptiles. The position of plant species populations in the 2D space produced by both axes predicts their rate of recovery from disturbances and population growth rate. This life-history framework may complement trait-based frameworks on leaf and wood economics; together these frameworks may allow prediction of responses of plants to anthropogenic disturbances and changing environments.}, 
 doi = {10.1073/pnas.1506215112}, 
 location = {}, 
@@ -137,7 +77,7 @@ keywords = {}}
 
 
 @Book{Mills2007,
-author = {Mills, L. S. }, 
+author = {MillsLS}, 
 title = {Conservation of Wildlife Populations: Demography, Genetics, and Management}, 
 volume = {}, 
 pages = {342}, 
@@ -147,14 +87,13 @@ publisher = {Blackwell},
 address = {Malden, MA}, 
 year = {2007}, 
 abstract = {}, 
-url = {https://www.amazon.com/Conservation-Wildlife-Populations-Demography-Management/dp/0470671491\%3FSubscriptionId\%3D0NM5T5X751JWT17C4GG2\%26linkCode\%3Dxm2\%26camp\%3D2025\%26creative\%3D165953\%26creativeASIN\%3D0470671491}}
+keywords = {}}
 
 @Article{Fujiwara2017,
-author = {Fujiwara, M. and Diaz-Lopez, J. }, 
+author = {FujiwaraMDiaz-LopezJ}, 
 title = {{Constructing stage-structured matrix population models from life tables: comparison of methods.}}, 
 journal = {PeerJ}, 
 volume = {5}, 
-issue = {}, 
 pages = {e3971}, 
 year = {2017}, 
 abstract = {A matrix population model is a convenient tool for summarizing}, 
@@ -164,25 +103,23 @@ keywords = {}}
 
 
 @Article{Dunham2014,
-author = {Dunham, K. and Dinkelacker, S. and Miller, J. }, 
+author = {DunhamKDinkelackerSMillerJ}, 
 title = {{A stage-based population model for American alligators in northern latitudes}}, 
-journal = {J Wildl Manag}, 
+journal = {J Wildl Manage}, 
 volume = {78}, 
-issue = {3}, 
 pages = {440-447}, 
 year = {2014}, 
-abstract = {Very little is known about the population dynamics of American alligators in northern latitudes. To better define the characteristics of the northern population, we combined published life-history and vital rate data for studies conducted in North Carolina and South Carolina; for comparison, we gleaned the same information from the literature for the southern (Florida and Louisiana) population. We constructed a 5-stage Lefkovitch matrix model for each population. The models showed that the southern population was stable and slightly increasing (? = 1.02), whereas the northern population was in decline (? = 0.870). We integrated potential impacts of climate change into the northern population model to determine how the population might respond to increased temperature and decreased precipitation. An increase in temperature would benefit the northern population; however, a decrease in precipitation or the combined effects of temperature increase and precipitation decrease would negatively affect the viability of the northern population. Two priorities result from modeling these scenarios: 1) a long-term monitoring program is needed to acquire the life-history and vital rate data on the northern population, and 2) current alligator habitat must be conserved or improved to insulate the species from potential drought associated with climate change.}, 
+abstract = {Very little is known about the population dynamics of American alligators in northern latitudes. To better define the characteristics of the northern population, we combined published life‐history and vital rate data for studies conducted in North Carolina and South Carolina; for comparison, we gleaned the same information from the literature for the southern (Florida and Louisiana) population. We constructed a 5‐stage Lefkovitch matrix model for each population. The models showed that the southern population was stable and slightly increasing (λ = 1.02), whereas the northern population was in decline (λ = 0.870). We integrated potential impacts of climate change into the northern population model to determine how the population might respond to increased temperature and decreased precipitation. An increase in temperature would benefit the northern population; however, a decrease in precipitation or the combined effects of temperature increase and precipitation decrease would negatively affect the viability of the northern population. Two priorities result from modeling these scenarios: 1) a long‐term monitoring program is needed to acquire the life‐history and vital rate data on the northern population, and 2) current alligator habitat must be conserved or improved to insulate the species from potential drought associated with climate change.}, 
 doi = {10.1002/jwmg.688}, 
 location = {}, 
 keywords = {}}
 
 
 @Article{Morris2011,
-author = {Morris, J. A. and Shertzer, K. W. and Rice, J. A. }, 
+author = {MorrisJAShertzerKWRiceJA}, 
 title = {{A stage-based matrix population model of invasive lionfish with implications for control}}, 
 journal = {Biol Invasions}, 
 volume = {13}, 
-issue = {1}, 
 pages = {7-12}, 
 year = {2011}, 
 abstract = {}, 
@@ -192,7 +129,7 @@ keywords = {}}
 
 
 @Book{Caswell1989,
-author = {Caswell, H. }, 
+author = {CaswellH}, 
 title = {Matrix population models: Construction, analysis, and interpretation}, 
 volume = {}, 
 pages = {}, 
@@ -202,28 +139,13 @@ publisher = {Sinauer},
 address = {Sunderland, MA}, 
 year = {1989}, 
 abstract = {}, 
-url = {}}
-
-@Article{Bienvenu2015,
-author = {Bienvenu, F. and Legendre, S. }, 
-title = {{A new approach to the generation time in matrix population models}}, 
-journal = {Am Nat}, 
-volume = {185}, 
-issue = {6}, 
-pages = {834-843}, 
-year = {2015}, 
-abstract = {The generation time is commonly defined as the mean age of mothers at birth. In matrix population models, a general formula is available to compute this quantity. However, it is complex and hard to interpret. Here, we present a new approach where the generation time is envisioned as a return time in an appropriate Markov chain. This yields surprisingly simple results, such as the fact that the generation time is the inverse of the sum of the elasticities of the growth rate to changes in the fertilities. This result sheds new light on the interpretation of elasticities (which as we show correspond to the frequency of events in the ancestral lineage of the population), and we use it to generalize a result known as Lebreton's formula. Finally, we also show that the generation time can be seen as a random variable, and we give a general expression for its distribution.}, 
-doi = {10.1086/681104}, 
-location = {Unit{\'e} Mixte de Recherche 8197, Institut de Biologie de l'{\'E}cole Normale Sup{\'e}rieure (Centre National de la Recherche Scientifique, {\'E}cole Normale Sup{\'e}rieure), 46 Rue d'Ulm, 75230 Paris Cedex 05, France.}, 
 keywords = {}}
 
-
 @Article{Stott2016,
-author = {Stott, I. }, 
+author = {StottI}, 
 title = {{Perturbation analysis of transient population dynamics using matrix projection models}}, 
 journal = {Methods Ecol Evol}, 
 volume = {7}, 
-issue = {6}, 
 pages = {666-678}, 
 year = {2016}, 
 abstract = {}, 
@@ -233,11 +155,10 @@ keywords = {}}
 
 
 @Article{Caughley1967,
-author = {Caughley, G. }, 
+author = {CaughleyG}, 
 title = {{Parameters for seasonally breeding populations}}, 
 journal = {Ecology}, 
 volume = {48}, 
-issue = {5}, 
 pages = {834-839}, 
 year = {1967}, 
 abstract = {}, 
@@ -247,7 +168,7 @@ keywords = {}}
 
 
 @Book{Coale1972,
-author = {Coale, A. J. }, 
+author = {CoaleAJ}, 
 title = {The growth and structure of human populations: a mathematical approach}, 
 volume = {}, 
 pages = {}, 
@@ -257,14 +178,13 @@ publisher = {Princeton University Press},
 address = {Princeton, NJ, USA}, 
 year = {1972}, 
 abstract = {}, 
-url = {}}
+keywords = {}}
 
 @Article{Lefkovitch1965,
-author = {Lefkovitch, L. P. }, 
+author = {LefkovitchLP}, 
 title = {{The study of population growth in organisms grouped by stages}}, 
 journal = {Biometrics}, 
 volume = {21}, 
-issue = {1}, 
 pages = {1-18}, 
 year = {1965}, 
 abstract = {}, 
@@ -274,11 +194,10 @@ keywords = {}}
 
 
 @Article{Leslie1945,
-author = {Leslie, P. H. }, 
+author = {LesliePH}, 
 title = {{On the use of matrices in certain population mathematics}}, 
 journal = {Biometrika}, 
 volume = {33}, 
-issue = {3}, 
 pages = {183-212}, 
 year = {1945}, 
 abstract = {}, 
@@ -288,7 +207,7 @@ keywords = {}}
 
 
 @Book{Ebert1998,
-author = {Ebert, T. A. }, 
+author = {EbertTA}, 
 title = {Plant and Animal Populations: Methods in Demography}, 
 volume = {}, 
 pages = {}, 
@@ -296,16 +215,15 @@ editor = {},
 edition = {}, 
 publisher = {Academic Press}, 
 address = {San Diego, CA}, 
-year = {1998}, 
+year = {1998-08-31}, 
 abstract = {Book Description: This text/reference addresses the ever-increasing challenges of documenting population demographic changes, and will serve as a bridge from introductory ecology to both applied and theoretical demography. It emphasizes the analysis of population data taken from a wide variety of organisms, including terrestrial and aquatic plants and animals found in habitats from equatorial rain forests to the arctic tundra. The book also contains computer programs that are written in BASIC and include tools for population projection, matrix analysis using both sensitivity and elasticity, individual growth and survival models, and the analysis of size-frequency distributions. Key Features * Includes BASIC programs for analysis of capture-recapture data, matrices, growth models, size-frequency distribution, survival models, and many others * Contains worked examples from a wide range of animals and plants * Emphasizes actual data}, 
-url = {https://www.amazon.com/Plant-Animal-Populations-Methods-Demography/dp/0122287401?SubscriptionId=0NM5T5X751JWT17C4GG2\&tag=sonnysoftware\&linkCode=xm2\&camp=2025\&creative=165953\&creativeASIN=0122287401}}
+keywords = {}}
 
 @Article{Caswell1996,
-author = {Caswell, H. }, 
+author = {CaswellH}, 
 title = {{Second derivatives of population growth rate: Calculation and applications}}, 
 journal = {Ecology}, 
 volume = {77}, 
-issue = {3}, 
 pages = {870-879}, 
 year = {1996}, 
 abstract = {}, 
@@ -315,11 +233,10 @@ keywords = {}}
 
 
 @Article{McCarthy2008,
-author = {McCarthy, D. and Townley, S. and Hodgson, D. }, 
+author = {McCarthyDTownleySHodgsonD}, 
 title = {{On second order sensitivity for stage-based population projection matrix models}}, 
-journal = {Theor Popul Biol}, 
+journal = {Theoretical Population Biology}, 
 volume = {74}, 
-issue = {1}, 
 pages = {68-73}, 
 year = {2008}, 
 abstract = {}, 
@@ -328,142 +245,21 @@ location = {},
 keywords = {}}
 
 
-@Book{Meyer2006,
-author = {}, 
-title = {Overcoming Barriers to Student Understanding: Threshold concepts and troublesome knowledge}, 
-volume = {}, 
-pages = {}, 
-editor = {Meyer, Jan and Land, Ray}, 
-publisher = {Routledge}, 
-address = {London}, 
-year = {2006}, 
-abstract = {Book Description: It has long been a matter of concern to teachers in higher education why certain students `get stuck' at particular points in the curriculum whilst others grasp concepts with comparative ease. What accounts for this variation in student performance and, more importantly, how can teachers change their teaching and courses to help students overcome such barriers? This book examines the difficulties of student learning and offers advice on how to overcome them through course design, assessment practice and teaching methods. It also provides innovative case material from a wide range of institutions and disciplines, including the social sciences, the humanities, the sciences and economics.}, 
-keywords = {}}
-
-@Incollection{Meyer2003a,
-author = {Meyer, J. H. F. and Land, R. }, 
-title = {{Threshold concepts and troublesome knowledge (1): linkages to ways of thinking and practising}}, 
-booktitle = {Improving Student Learning --- ten years on}, 
-editor = {Rust, C. }, 
-publisher = {Oxford Centre for Staff Development}, 
-address = {Oxford. UK}, 
-pages = {}, 
-year = {2003}, 
-abstract = {}, 
-keywords = {}}
-
-@Book{Gallager1995,
-author = {Gallager, R. G. }, 
-title = {Discrete Stochastic Processes}, 
-volume = {}, 
-pages = {}, 
-editor = {}, 
-edition = {}, 
-publisher = {Kluwer Academic Publishers}, 
-address = {Norwell, MA}, 
-year = {1995}, 
-abstract = {}, 
-url = {}}
-
-@Book{Kendall2018a,
-author = {Kendall, B. E. }, 
-title = {mpmtools: Tools for Building and Analyzing Matrix Population Models}, 
-volume = {}, 
-pages = {}, 
-editor = {}, 
-edition = {}, 
-publisher = {R package version 0.1.0}, 
-address = {https://github.com/BruceKendall/mpmtools}, 
-year = {2018}, 
-abstract = {}, 
-url = {}}
-
-@Article{Muller2008,
-author = {Muller, D. A. and Bewes, J. and Sharma, M. D. and Reimann, P. }, 
-title = {{Saying the wrong thing: improving learning with multimedia by including misconceptions: Misconception-based multimedia instruction}}, 
-journal = {J Comput Assist Learn}, 
-volume = {24}, 
-issue = {2}, 
-pages = {144-155}, 
-year = {2008}, 
-abstract = {}, 
-doi = {10.1111/j.1365-2729.2007.00248.x}, 
-location = {}, 
-keywords = {}}
-
-
-@Article{Muller2008a,
-author = {Muller, D. A. and Sharma, M. D. and Reimann, P. }, 
-title = {{Raising cognitive load with linear multimedia to promote conceptual change}}, 
-journal = {Sci Educ}, 
-volume = {92}, 
-issue = {2}, 
-pages = {278-296}, 
-year = {2008}, 
-abstract = {}, 
-doi = {10.1002/sce.20244}, 
-location = {}, 
-keywords = {}}
-
-
-@Article{Stubben2007,
-author = {Stubben, C. and Milligan, B. }, 
-title = {{Estimating and analyzing demographic models using the popbio package in R}}, 
-journal = {J Stat Soft}, 
-volume = {22}, 
-issue = {}, 
-pages = {11}, 
-year = {2007}, 
-abstract = {}, 
-doi = {10.18637/jss.v022.i11}, 
-location = {}, 
-keywords = {}}
-
-
-@Article{Werner1977,
-author = {Werner, P. A. and Caswell, H. }, 
-title = {{Population growth rates and age versus stage-distribution models for teasel (\textit{Dipsacus sylvestris} Huds.)}}, 
-journal = {Ecology}, 
-volume = {58}, 
-issue = {5}, 
-pages = {1103-1111}, 
-year = {1977}, 
-abstract = {}, 
-doi = {10.2307/1936930}, 
-location = {}, 
-keywords = {}}
-
-
-@Article{Paniw2018,
-author = {Paniw, M. and Ozgul, A. and Salguero-G{\'o}mez, R. }, 
-title = {{Interactive life-history traits predict sensitivity of plants and animals to temporal autocorrelation}}, 
-journal = {Ecol Lett}, 
-volume = {21}, 
-issue = {2}, 
-pages = {275-286}, 
-year = {2018}, 
-abstract = {}, 
-doi = {10.1111/ele.12892}, 
-location = {}, 
-keywords = {}}
-
-
-@Article{Caswell2018,
-author = {Caswell, H. and de Vries, C. and Hartemink, N. and Roth, G. and van Daalen, S. F. }, 
-title = {{Age * stage-classified demographic analysis: a comprehensive approach}}, 
-journal = {Ecol Monogr}, 
-volume = {88}, 
-issue = {}, 
-pages = {}, 
-year = {2018}, 
-abstract = {}, 
-doi = {10.1002/ecm.1306}, 
-location = {}, 
+@Article{Bienvenu2015,
+author = {BienvenuFLegendreS}, 
+title = {{A new approach to the generation time in matrix population models}}, 
+journal = {Am Nat}, 
+volume = {185}, 
+pages = {834-843}, 
+year = {2015 Jun}, 
+abstract = {The generation time is commonly defined as the mean age of mothers at birth. In matrix population models, a general formula is available to compute this quantity. However, it is complex and hard to interpret. Here, we present a new approach where the generation time is envisioned as a return time in an appropriate Markov chain. This yields surprisingly simple results, such as the fact that the generation time is the inverse of the sum of the elasticities of the growth rate to changes in the fertilities. This result sheds new light on the interpretation of elasticities (which as we show correspond to the frequency of events in the ancestral lineage of the population), and we use it to generalize a result known as Lebreton’s formula. Finally, we also show that the generation time can be seen as a random variable, and we give a general expression for its distribution.}, 
+doi = {10.1086/681104}, 
+location = {Unité Mixte de Recherche 8197, Institut de Biologie de l’École Normale Supérieure (Centre National de la Recherche Scientifique, École Normale Supérieure), 46 Rue d’Ulm, 75230 Paris Cedex 05, France.}, 
 keywords = {}}
 
 
 @Book{Caswell2001,
-author = {Caswell, H. }, 
+author = {CaswellH}, 
 title = {Matrix population models: Construction, analysis, and interpretation}, 
 volume = {}, 
 pages = {}, 
@@ -473,5 +269,198 @@ publisher = {Sinauer Associates},
 address = {Sunderland, MA}, 
 year = {2001}, 
 abstract = {}, 
-url = {}}
+keywords = {}}
+
+@Article{Cousin2006,
+author = {CousinG}, 
+title = {{An introduction to threshold concepts}}, 
+journal = {Planet}, 
+volume = {17}, 
+pages = {4-5}, 
+year = {2006}, 
+abstract = {}, 
+doi = {10.11120/plan.2006.00170004}, 
+location = {}, 
+keywords = {}}
+
+
+@Book{Meyer2006,
+author = {}, 
+title = {Overcoming Barriers to Student Understanding: Threshold concepts and troublesome knowledge}, 
+volume = {}, 
+pages = {}, 
+editor = {MeyerJanLandRay}, 
+publisher = {Routledge}, 
+address = {London}, 
+year = {2006-08-18}, 
+abstract = {Book Description: It has long been a matter of concern to teachers in higher education why certain students ‘get stuck’ at particular points in the curriculum whilst others grasp concepts with comparative ease. What accounts for this variation in student performance and, more importantly, how can teachers change their teaching and courses to help students overcome such barriers? This book examines the difficulties of student learning and offers advice on how to overcome them through course design, assessment practice and teaching methods. It also provides innovative case material from a wide range of institutions and disciplines, including the social sciences, the humanities, the sciences and economics.}, 
+keywords = {}}
+
+@Incollection{Meyer2003a,
+author = {MeyerJHFLandR}, 
+title = {{Threshold concepts and troublesome knowledge (1): linkages to ways of thinking and practising}}, 
+booktitle = {Improving Student Learning --- ten years on}, 
+editor = {RustC}, 
+publisher = {Oxford Centre for Staff Development}, 
+address = {Oxford. UK}, 
+pages = {}, 
+year = {2003}, 
+abstract = {}, 
+keywords = {}}
+
+@Article{deValpine2014,
+author = {de ValpinePScrantonKKnapeJRamKMillsNJ}, 
+title = {{The importance of individual developmental variation in stage-structured population models.}}, 
+journal = {Ecol Lett}, 
+volume = {17}, 
+pages = {1026-1038}, 
+year = {2014}, 
+abstract = {Population stage structure is fundamental to ecology, and models of this structure have proven useful in many different systems. Many ecological variables other than stage, such as habitat type, site occupancy and metapopulation status are also modelled using transitions among discrete states. Transitions among life stages can be characterised by the distribution of time spent in each stage, including the mean and variance of each stage duration and within-individual correlations among multiple stage durations. Three modelling traditions represent stage durations differently. Matrix models can be derived as a long-run approximation from any distribution of stage durations, but they are often interpreted directly as a Markov model for stage transitions. Statistical stage-duration distribution models accommodate the variation typical of cohort development data, but such realism has rarely been incorporated in population theory or statistical population models. Delay-differential equation models include lags but no variation, except in limited cases. We synthesise these models in one framework and illustrate how individual variation and correlations in development can impact population growth. Furthermore, different development models can yield the same long-term matrix transition rates but different sensitivities and elasticities. Finally, we discuss future directions for estimating realistic stage duration models from data.}, 
+doi = {10.1111/ele.12290}, 
+location = {}, 
+keywords = {Animals; Arthropods; Arthropods: physiology; Biological; Life Cycle Stages; Life Cycle Stages: physiology; Models; Population Dynamics; Statistical}}
+
+
+@Article{Fujiwara2001a,
+author = {FujiwaraMCaswellH}, 
+title = {{Demography of the endangered North Atlantic right whale}}, 
+journal = {Nature}, 
+volume = {414}, 
+pages = {537-541}, 
+year = {2001}, 
+abstract = {}, 
+doi = {10.1038/35107054}, 
+location = {}, 
+keywords = {}}
+
+
+@Book{Ellner2016a,
+author = {EllnerSPChildsDZReesM}, 
+title = {Data-driven Modelling of Structured Populations: A Practical Guide to the Integral Projection Model}, 
+volume = {}, 
+pages = {}, 
+editor = {}, 
+edition = {}, 
+publisher = {Springer International}, 
+address = {Switzerland}, 
+year = {2016-06-14}, 
+abstract = {Book Description: This book is a “How To” guide for modeling population dynamics using Integral Projection Models (IPM) starting from observational data. It is written by a leading research team in this area and includes code in the R language (in the text and online) to carry out all computations. The intended audience are ecologists, evolutionary biologists, and mathematical biologists interested in developing data-driven models for animal and plant populations. IPMs may seem hard as they involve integrals. The aim of this book is to demystify IPMs, so they become the model of choice for populations structured by size or other continuously varying traits. The book uses real examples of increasing complexity to show how the life-cycle of the study organism naturally leads to the appropriate statistical analysis, which leads directly to the IPM itself. A wide range of model types and analyses are presented, including model construction, computational methods, and the underlying theory, with the more technical material in Boxes and Appendices. Self-contained R code which replicates all of the figures and calculations within the text is available to readers on GitHub. Stephen P. Ellner is Horace White Professor of Ecology and Evolutionary Biology at Cornell University, USA; Dylan Z. Childs is Lecturer and NERC Postdoctoral Fellow in the Department of Animal and Plant Sciences at The University of Sheffield, UK; Mark Rees is Professor in the Department of Animal and Plant Sciences at The University of Sheffield, UK.}, 
+keywords = {}}
+
+@Book{Gallager1995,
+author = {GallagerRG}, 
+title = {Discrete Stochastic Processes}, 
+volume = {}, 
+pages = {}, 
+editor = {}, 
+edition = {}, 
+publisher = {Kluwer Academic Publishers}, 
+address = {Norwell, MA}, 
+year = {1995}, 
+abstract = {}, 
+keywords = {}}
+
+@Article{Muller2008,
+author = {MullerDABewesJSharmaMDReimannP}, 
+title = {{Saying the wrong thing: improving learning with multimedia by including misconceptions: Misconception-based multimedia instruction}}, 
+journal = {Journal of Computer Assisted Learning}, 
+volume = {24}, 
+pages = {144-155}, 
+year = {2008}, 
+abstract = {}, 
+doi = {10.1111/j.1365-2729.2007.00248.x}, 
+location = {}, 
+keywords = {}}
+
+
+@Article{Werner1977,
+author = {WernerPACaswellH}, 
+title = {{Population growth rates and age versus stage-distribution models for teasel (\textit{Dipsacus sylvestris} Huds.)}}, 
+journal = {Ecology}, 
+volume = {58}, 
+pages = {1103-1111}, 
+year = {1977}, 
+abstract = {}, 
+doi = {10.2307/1936930}, 
+location = {}, 
+keywords = {}}
+
+
+@Article{Paniw2018,
+author = {PaniwMOzgulASalguero-GómezR}, 
+title = {{Interactive life-history traits predict sensitivity of plants and animals to temporal autocorrelation}}, 
+journal = {Ecol Lett}, 
+volume = {21}, 
+pages = {275-286}, 
+year = {2018}, 
+abstract = {}, 
+doi = {10.1111/ele.12892}, 
+location = {}, 
+keywords = {}}
+
+
+@Book{Kendall2018a,
+author = {KendallBE}, 
+title = {mpmtools: Tools for Building and Analyzing Matrix Population Models}, 
+volume = {}, 
+pages = {}, 
+editor = {}, 
+edition = {}, 
+publisher = {R package version 0.1.0}, 
+address = {\url{https://github.com/BruceKendall/mpmtools}}, 
+year = {2018}, 
+abstract = {}, 
+keywords = {}}
+
+@Article{Muller2008a,
+author = {MullerDASharmaMDReimannP}, 
+title = {{Raising cognitive load with linear multimedia to promote conceptual change}}, 
+journal = {Science Education}, 
+volume = {92}, 
+pages = {278-296}, 
+year = {2008}, 
+abstract = {}, 
+doi = {10.1002/sce.20244}, 
+location = {}, 
+keywords = {}}
+
+
+@Article{Stubben2007,
+author = {StubbenCMilliganB}, 
+title = {{Estimating and analyzing demographic models using the popbio package in R}}, 
+journal = {Journal of Statistical Software}, 
+volume = {22}, 
+pages = {11}, 
+year = {2007}, 
+abstract = {}, 
+doi = {10.18637/jss.v022.i11}, 
+location = {}, 
+keywords = {}}
+
+
+@Article{Caswell2018,
+author = {CaswellHde VriesCHarteminkNRothGvan DaalenSF}, 
+title = {{Age × stage-classified demographic analysis: a comprehensive approach}}, 
+journal = {Ecol Monogr}, 
+volume = {88}, 
+pages = {}, 
+year = {2018}, 
+abstract = {}, 
+doi = {10.1002/ecm.1306}, 
+location = {}, 
+keywords = {}}
+
+
+@Book{COMADRE2017,
+author = {Anonymous}, 
+title = {{User guide to the COMADRE Animal Matrix Database}}, 
+volume = {}, 
+pages = {}, 
+editor = {}, 
+edition = {}, 
+publisher = {\url{https://github.com/jonesor/compadreDB/blob/master/COMADRE-UserGuide/COMADRE-UserGuide.pdf} (accessed 4 September 2018)}, 
+address = {}, 
+year = {2017}, 
+abstract = {}, 
+keywords = {}}
 
