Additional maturation data

--- a/docs/MPM_errors_manuscript/Bibliography.bib
+++ b/docs/MPM_errors_manuscript/Bibliography.bib
@@ -1,5 +1,5 @@
 @Article{Crouse1987,
-author = {CrouseDTCrowderLBCaswellH}, 
+author = {Crouse, D. T. and Crowder, L. B. and Caswell, H. }, 
 title = {{A stage-based population model for loggerhead sea turtles and implications for conservation}}, 
 journal = {Ecology}, 
 volume = {68}, 
@@ -12,7 +12,7 @@ keywords = {}}
 
 
 @Article{Crowder1994,
-author = {CrowderLBCrouseDTHeppellSSMartinTH}, 
+author = {Crowder, L. B. and Crouse, D. T. and Heppell, S. S. and Martin, T. H. }, 
 title = {{Predicting the impact of turtle excluder devices on loggerhead sea turtle populations}}, 
 journal = {Ecol Appl}, 
 volume = {4}, 
@@ -25,7 +25,7 @@ keywords = {}}
 
 
 @Book{Morris2002a,
-author = {MorrisWFDoakDF}, 
+author = {Morris, W. F. and Doak, D. F. }, 
 title = {Quantitative conservation biology: Theory and practice of population viability analysis}, 
 volume = {}, 
 pages = {}, 
@@ -38,7 +38,7 @@ abstract = {},
 keywords = {}}
 
 @Article{Salguero-Gomez2015,
-author = {Salguero-GómezRJonesORArcherCRBuckleyYMChe-CastaldoJCaswellHHodgsonDScheuerleinACondeDABrinksEde BuhrHFarackCGottschalkFHartmannAHenningAHoppeGRömerGRungeJRuoffTWilleJZehSDavisonRViereggDBaudischAAltweggRColcheroFDongMde KroonHLebretonJ-DMetcalfCJENeelMMParkerIMTakadaTValverdeTVélez-EspinoLAWardleGMFrancoMVaupelJW}, 
+author = {Salguero-Gómez, R. and Jones, O. R. and Archer, C. R. and Buckley, Y. M. and Che-Castaldo, J. and Caswell, H. and Hodgson, D. and Scheuerlein, A. and Conde, D. A. and Brinks, E. and {de Buhr}, H. and Farack, C. and Gottschalk, F. and Hartmann, A. and Henning, A. and Hoppe, G. and Römer, G. and Runge, J. and Ruoff, T. and Wille, J. and Zeh, S. and Davison, R. and Vieregg, D. and Baudisch, A. and Altwegg, R. and Colchero, F. and Dong, M. and {de Kroon}, H. and Lebreton, J.-D. and Metcalf, C. J. E. and Neel, M. M. and Parker, I. M. and Takada, T. and Valverde, T. and Vélez-Espino, L. A. and Wardle, G. M. and Franco, M. and Vaupel, J. W. }, 
 title = {{The COMPADRE Plant Matrix Database: an open online repository for plant demography}}, 
 journal = {J Ecol}, 
 volume = {103}, 
@@ -51,12 +51,12 @@ keywords = {}}
 
 
 @Article{Salguero-Gomez2016,
-author = {Salguero-GómezRJonesORArcherCRBeinCde BuhrHFarackCGottschalkFHartmannAHenningAHoppeGRömerGRuoffTSommerVWilleJVoigtJZehSViereggDBuckleyYMChe-CastaldoJHodgsonDScheuerleinACaswellHVaupelJW}, 
+author = {Salguero-Gómez, R. and Jones, O. R. and Archer, C. R. and Bein, C. and {de Buhr}, H. and Farack, C. and Gottschalk, F. and Hartmann, A. and Henning, A. and Hoppe, G. and Römer, G. and Ruoff, T. and Sommer, V. and Wille, J. and Voigt, J. and Zeh, S. and Vieregg, D. and Buckley, Y. M. and Che-Castaldo, J. and Hodgson, D. and Scheuerlein, A. and Caswell, H. and Vaupel, J. W. }, 
 title = {{COMADRE: a global data base of animal demography.}}, 
 journal = {J Anim Ecol}, 
 volume = {85}, 
 pages = {371-384}, 
-year = {2016 Mar}, 
+year = {2016}, 
 abstract = {The open-data scientific philosophy is being widely adopted and proving to promote considerable progress in ecology and evolution. Open-data global data bases now exist on animal migration, species distribution, conservation status, etc. However, a gap exists for data on population dynamics spanning the rich diversity of the animal kingdom world-wide. This information is fundamental to our understanding of the conditions that have shaped variation in animal life histories and their relationships with the environment, as well as the determinants of invasion and extinction. Matrix population models (MPMs) are among the most widely used demographic tools by animal ecologists. MPMs project population dynamics based on the reproduction, survival and development of individuals in a population over their life cycle. The outputs from MPMs have direct biological interpretations, facilitating comparisons among animal species as different as Caenorhabditis elegans, Loxodonta africana and Homo sapiens. Thousands of animal demographic records exist in the form of MPMs, but they are dispersed throughout the literature, rendering comparative analyses difficult. Here, we introduce the COMADRE Animal Matrix Database, an open-data online repository, which in its version 1.0.0 contains data on 345 species world-wide, from 402 studies with a total of 1625 population projection matrices. COMADRE also contains ancillary information (e.g. ecoregion, taxonomy, biogeography, etc.) that facilitates interpretation of the numerous demographic metrics that can be derived from its MPMs. We provide R code to some of these examples. SYNTHESIS: We introduce the COMADRE Animal Matrix Database, a resource for animal demography. Its open-data nature, together with its ancillary information, will facilitate comparative analysis, as will the growing availability of databases focusing on other aspects of the rich animal diversity, and tools to query and combine them. Through future frequent updates of COMADRE, and its integration with other online resources, we encourage animal ecologists to tackle global ecological and evolutionary questions with unprecedented sample size.}, 
 doi = {10.1111/1365-2656.12482}, 
 location = {}, 
@@ -64,12 +64,12 @@ keywords = {}}
 
 
 @Article{Salguero-Gomez2016a,
-author = {Salguero-GómezRJonesORJongejansEBlombergSPHodgsonDJMbeau-AcheCZuidemaPAde KroonHBuckleyYM}, 
+author = {Salguero-Gómez, R. and Jones, O. R. and Jongejans, E. and Blomberg, S. P. and Hodgson, D. J. and Mbeau-Ache, C. and Zuidema, P. A. and de Kroon, H. and Buckley, Y. M. }, 
 title = {{Fast-slow continuum and reproductive strategies structure plant life-history variation worldwide.}}, 
-journal = {Proc. Natl. Acad. Sci. U. S. A.}, 
+journal = {Proc Natl Acad Sci U S A}, 
 volume = {113}, 
 pages = {230-235}, 
-year = {2016 Jan 05}, 
+year = {2016}, 
 abstract = {The identification of patterns in life-history strategies across the tree of life is essential to our prediction of population persistence, extinction, and diversification. Plants exhibit a wide range of patterns of longevity, growth, and reproduction, but the general determinants of this enormous variation in life history are poorly understood. We use demographic data from 418 plant species in the wild, from annual herbs to supercentennial trees, to examine how growth form, habitat, and phylogenetic relationships structure plant life histories and to develop a framework to predict population performance. We show that 55\% of the variation in plant life-history strategies is adequately characterized using two independent axes: the fast-slow continuum, including fast-growing, short-lived plant species at one end and slow-growing, long-lived species at the other, and a reproductive strategy axis, with highly reproductive, iteroparous species at one extreme and poorly reproductive, semelparous plants with frequent shrinkage at the other. Our findings remain consistent across major habitats and are minimally affected by plant growth form and phylogenetic ancestry, suggesting that the relative independence of the fast-slow and reproduction strategy axes is general in the plant kingdom. Our findings have similarities with how life-history strategies are structured in mammals, birds, and reptiles. The position of plant species populations in the 2D space produced by both axes predicts their rate of recovery from disturbances and population growth rate. This life-history framework may complement trait-based frameworks on leaf and wood economics; together these frameworks may allow prediction of responses of plants to anthropogenic disturbances and changing environments.}, 
 doi = {10.1073/pnas.1506215112}, 
 location = {}, 
@@ -77,7 +77,7 @@ keywords = {}}
 
 
 @Book{Mills2007,
-author = {MillsLS}, 
+author = {Mills, L. S. }, 
 title = {Conservation of Wildlife Populations: Demography, Genetics, and Management}, 
 volume = {}, 
 pages = {342}, 
@@ -90,7 +90,7 @@ abstract = {},
 keywords = {}}
 
 @Article{Fujiwara2017,
-author = {FujiwaraMDiaz-LopezJ}, 
+author = {Fujiwara, M. and Diaz-Lopez, J. }, 
 title = {{Constructing stage-structured matrix population models from life tables: comparison of methods.}}, 
 journal = {PeerJ}, 
 volume = {5}, 
@@ -103,7 +103,7 @@ keywords = {}}
 
 
 @Article{Dunham2014,
-author = {DunhamKDinkelackerSMillerJ}, 
+author = {Dunham, K. and Dinkelacker, S. and Miller, J. }, 
 title = {{A stage-based population model for American alligators in northern latitudes}}, 
 journal = {J Wildl Manage}, 
 volume = {78}, 
@@ -116,7 +116,7 @@ keywords = {}}
 
 
 @Article{Morris2011,
-author = {MorrisJAShertzerKWRiceJA}, 
+author = {Morris, J. A. and Shertzer, K. W. and Rice, J. A. }, 
 title = {{A stage-based matrix population model of invasive lionfish with implications for control}}, 
 journal = {Biol Invasions}, 
 volume = {13}, 
@@ -129,7 +129,7 @@ keywords = {}}
 
 
 @Book{Caswell1989,
-author = {CaswellH}, 
+author = {Caswell, H. }, 
 title = {Matrix population models: Construction, analysis, and interpretation}, 
 volume = {}, 
 pages = {}, 
@@ -142,7 +142,7 @@ abstract = {},
 keywords = {}}
 
 @Article{Stott2016,
-author = {StottI}, 
+author = {Stott, I. }, 
 title = {{Perturbation analysis of transient population dynamics using matrix projection models}}, 
 journal = {Methods Ecol Evol}, 
 volume = {7}, 
@@ -155,7 +155,7 @@ keywords = {}}
 
 
 @Article{Caughley1967,
-author = {CaughleyG}, 
+author = {Caughley, G. }, 
 title = {{Parameters for seasonally breeding populations}}, 
 journal = {Ecology}, 
 volume = {48}, 
@@ -168,7 +168,7 @@ keywords = {}}
 
 
 @Book{Coale1972,
-author = {CoaleAJ}, 
+author = {Coale, A. J. }, 
 title = {The growth and structure of human populations: a mathematical approach}, 
 volume = {}, 
 pages = {}, 
@@ -181,7 +181,7 @@ abstract = {},
 keywords = {}}
 
 @Article{Lefkovitch1965,
-author = {LefkovitchLP}, 
+author = {Lefkovitch, L. P. }, 
 title = {{The study of population growth in organisms grouped by stages}}, 
 journal = {Biometrics}, 
 volume = {21}, 
@@ -194,7 +194,7 @@ keywords = {}}
 
 
 @Article{Leslie1945,
-author = {LesliePH}, 
+author = {Leslie, P. H. }, 
 title = {{On the use of matrices in certain population mathematics}}, 
 journal = {Biometrika}, 
 volume = {33}, 
@@ -207,7 +207,7 @@ keywords = {}}
 
 
 @Book{Ebert1998,
-author = {EbertTA}, 
+author = {Ebert, T. A. }, 
 title = {Plant and Animal Populations: Methods in Demography}, 
 volume = {}, 
 pages = {}, 
@@ -215,12 +215,12 @@ editor = {},
 edition = {}, 
 publisher = {Academic Press}, 
 address = {San Diego, CA}, 
-year = {1998-08-31}, 
+year = {1998}, 
 abstract = {Book Description: This text/reference addresses the ever-increasing challenges of documenting population demographic changes, and will serve as a bridge from introductory ecology to both applied and theoretical demography. It emphasizes the analysis of population data taken from a wide variety of organisms, including terrestrial and aquatic plants and animals found in habitats from equatorial rain forests to the arctic tundra. The book also contains computer programs that are written in BASIC and include tools for population projection, matrix analysis using both sensitivity and elasticity, individual growth and survival models, and the analysis of size-frequency distributions. Key Features * Includes BASIC programs for analysis of capture-recapture data, matrices, growth models, size-frequency distribution, survival models, and many others * Contains worked examples from a wide range of animals and plants * Emphasizes actual data}, 
 keywords = {}}
 
 @Article{Caswell1996,
-author = {CaswellH}, 
+author = {Caswell, H. }, 
 title = {{Second derivatives of population growth rate: Calculation and applications}}, 
 journal = {Ecology}, 
 volume = {77}, 
@@ -233,7 +233,7 @@ keywords = {}}
 
 
 @Article{McCarthy2008,
-author = {McCarthyDTownleySHodgsonD}, 
+author = {McCarthy, D. and Townley, S. and Hodgson, D. }, 
 title = {{On second order sensitivity for stage-based population projection matrix models}}, 
 journal = {Theoretical Population Biology}, 
 volume = {74}, 
@@ -246,12 +246,12 @@ keywords = {}}
 
 
 @Article{Bienvenu2015,
-author = {BienvenuFLegendreS}, 
+author = {Bienvenu, F. and Legendre, S. }, 
 title = {{A new approach to the generation time in matrix population models}}, 
 journal = {Am Nat}, 
 volume = {185}, 
 pages = {834-843}, 
-year = {2015 Jun}, 
+year = {2015}, 
 abstract = {The generation time is commonly defined as the mean age of mothers at birth. In matrix population models, a general formula is available to compute this quantity. However, it is complex and hard to interpret. Here, we present a new approach where the generation time is envisioned as a return time in an appropriate Markov chain. This yields surprisingly simple results, such as the fact that the generation time is the inverse of the sum of the elasticities of the growth rate to changes in the fertilities. This result sheds new light on the interpretation of elasticities (which as we show correspond to the frequency of events in the ancestral lineage of the population), and we use it to generalize a result known as Lebreton’s formula. Finally, we also show that the generation time can be seen as a random variable, and we give a general expression for its distribution.}, 
 doi = {10.1086/681104}, 
 location = {Unité Mixte de Recherche 8197, Institut de Biologie de l’École Normale Supérieure (Centre National de la Recherche Scientifique, École Normale Supérieure), 46 Rue d’Ulm, 75230 Paris Cedex 05, France.}, 
@@ -259,7 +259,7 @@ keywords = {}}
 
 
 @Book{Caswell2001,
-author = {CaswellH}, 
+author = {Caswell, H. }, 
 title = {Matrix population models: Construction, analysis, and interpretation}, 
 volume = {}, 
 pages = {}, 
@@ -272,7 +272,7 @@ abstract = {},
 keywords = {}}
 
 @Article{Cousin2006,
-author = {CousinG}, 
+author = {Cousin, G. }, 
 title = {{An introduction to threshold concepts}}, 
 journal = {Planet}, 
 volume = {17}, 
@@ -289,18 +289,18 @@ author = {},
 title = {Overcoming Barriers to Student Understanding: Threshold concepts and troublesome knowledge}, 
 volume = {}, 
 pages = {}, 
-editor = {MeyerJanLandRay}, 
+editor = {Meyer, Jan and Land, Ray}, 
 publisher = {Routledge}, 
 address = {London}, 
-year = {2006-08-18}, 
+year = {2006}, 
 abstract = {Book Description: It has long been a matter of concern to teachers in higher education why certain students ‘get stuck’ at particular points in the curriculum whilst others grasp concepts with comparative ease. What accounts for this variation in student performance and, more importantly, how can teachers change their teaching and courses to help students overcome such barriers? This book examines the difficulties of student learning and offers advice on how to overcome them through course design, assessment practice and teaching methods. It also provides innovative case material from a wide range of institutions and disciplines, including the social sciences, the humanities, the sciences and economics.}, 
 keywords = {}}
 
 @Incollection{Meyer2003a,
-author = {MeyerJHFLandR}, 
+author = {Meyer, J. H. F. and Land, R. }, 
 title = {{Threshold concepts and troublesome knowledge (1): linkages to ways of thinking and practising}}, 
 booktitle = {Improving Student Learning --- ten years on}, 
-editor = {RustC}, 
+editor = {Rust, C. }, 
 publisher = {Oxford Centre for Staff Development}, 
 address = {Oxford. UK}, 
 pages = {}, 
@@ -309,7 +309,7 @@ abstract = {},
 keywords = {}}
 
 @Article{deValpine2014,
-author = {de ValpinePScrantonKKnapeJRamKMillsNJ}, 
+author = {{de Valpine}, P. and Scranton, K. and Knape, J. and Ram, K. and Mills, N. J. }, 
 title = {{The importance of individual developmental variation in stage-structured population models.}}, 
 journal = {Ecol Lett}, 
 volume = {17}, 
@@ -322,7 +322,7 @@ keywords = {Animals; Arthropods; Arthropods: physiology; Biological; Life Cycle 
 
 
 @Article{Fujiwara2001a,
-author = {FujiwaraMCaswellH}, 
+author = {Fujiwara, M. and Caswell, H. }, 
 title = {{Demography of the endangered North Atlantic right whale}}, 
 journal = {Nature}, 
 volume = {414}, 
@@ -335,7 +335,7 @@ keywords = {}}
 
 
 @Book{Ellner2016a,
-author = {EllnerSPChildsDZReesM}, 
+author = {Ellner, S. P. and Childs, D. Z. and Rees, M. }, 
 title = {Data-driven Modelling of Structured Populations: A Practical Guide to the Integral Projection Model}, 
 volume = {}, 
 pages = {}, 
@@ -343,12 +343,12 @@ editor = {},
 edition = {}, 
 publisher = {Springer International}, 
 address = {Switzerland}, 
-year = {2016-06-14}, 
+year = {2016}, 
 abstract = {Book Description: This book is a “How To” guide for modeling population dynamics using Integral Projection Models (IPM) starting from observational data. It is written by a leading research team in this area and includes code in the R language (in the text and online) to carry out all computations. The intended audience are ecologists, evolutionary biologists, and mathematical biologists interested in developing data-driven models for animal and plant populations. IPMs may seem hard as they involve integrals. The aim of this book is to demystify IPMs, so they become the model of choice for populations structured by size or other continuously varying traits. The book uses real examples of increasing complexity to show how the life-cycle of the study organism naturally leads to the appropriate statistical analysis, which leads directly to the IPM itself. A wide range of model types and analyses are presented, including model construction, computational methods, and the underlying theory, with the more technical material in Boxes and Appendices. Self-contained R code which replicates all of the figures and calculations within the text is available to readers on GitHub. Stephen P. Ellner is Horace White Professor of Ecology and Evolutionary Biology at Cornell University, USA; Dylan Z. Childs is Lecturer and NERC Postdoctoral Fellow in the Department of Animal and Plant Sciences at The University of Sheffield, UK; Mark Rees is Professor in the Department of Animal and Plant Sciences at The University of Sheffield, UK.}, 
 keywords = {}}
 
 @Book{Gallager1995,
-author = {GallagerRG}, 
+author = {Gallager, R. G. }, 
 title = {Discrete Stochastic Processes}, 
 volume = {}, 
 pages = {}, 
@@ -361,7 +361,7 @@ abstract = {},
 keywords = {}}
 
 @Article{Muller2008,
-author = {MullerDABewesJSharmaMDReimannP}, 
+author = {Muller, D. A. and Bewes, J. and Sharma, M. D. and Reimann, P. }, 
 title = {{Saying the wrong thing: improving learning with multimedia by including misconceptions: Misconception-based multimedia instruction}}, 
 journal = {Journal of Computer Assisted Learning}, 
 volume = {24}, 
@@ -374,7 +374,7 @@ keywords = {}}
 
 
 @Article{Werner1977,
-author = {WernerPACaswellH}, 
+author = {Werner, P. A. and Caswell, H. }, 
 title = {{Population growth rates and age versus stage-distribution models for teasel (\textit{Dipsacus sylvestris} Huds.)}}, 
 journal = {Ecology}, 
 volume = {58}, 
@@ -387,7 +387,7 @@ keywords = {}}
 
 
 @Article{Paniw2018,
-author = {PaniwMOzgulASalguero-GómezR}, 
+author = {Paniw, M. and Ozgul, A. and Salguero-Gómez, R. }, 
 title = {{Interactive life-history traits predict sensitivity of plants and animals to temporal autocorrelation}}, 
 journal = {Ecol Lett}, 
 volume = {21}, 
@@ -400,7 +400,7 @@ keywords = {}}
 
 
 @Book{Kendall2018a,
-author = {KendallBE}, 
+author = {Kendall, B. E. }, 
 title = {mpmtools: Tools for Building and Analyzing Matrix Population Models}, 
 volume = {}, 
 pages = {}, 
@@ -413,7 +413,7 @@ abstract = {},
 keywords = {}}
 
 @Article{Muller2008a,
-author = {MullerDASharmaMDReimannP}, 
+author = {Muller, D. A. and Sharma, M. D. and Reimann, P. }, 
 title = {{Raising cognitive load with linear multimedia to promote conceptual change}}, 
 journal = {Science Education}, 
 volume = {92}, 
@@ -426,7 +426,7 @@ keywords = {}}
 
 
 @Article{Stubben2007,
-author = {StubbenCMilliganB}, 
+author = {Stubben, C. and Milligan, B. }, 
 title = {{Estimating and analyzing demographic models using the popbio package in R}}, 
 journal = {Journal of Statistical Software}, 
 volume = {22}, 
@@ -439,7 +439,7 @@ keywords = {}}
 
 
 @Article{Caswell2018,
-author = {CaswellHde VriesCHarteminkNRothGvan DaalenSF}, 
+author = {Caswell, H. and de Vries, C. and Hartemink, N. and Roth, G. and van Daalen, S. F. }, 
 title = {{Age × stage-classified demographic analysis: a comprehensive approach}}, 
 journal = {Ecol Monogr}, 
 volume = {88}, 
